<resources>
    <string name="app_name">Sarahi</string>
    <string name="homework">Homework</string>
    <string name="homework1">HOMEWORK1</string>
    <string name="homework3">HOMEWORK3</string>
    <string name="MENU">MENU</string>
    <string name="LAS_VOCALES">LAS VOCALES</string>
    <string name="diaz_de_la_semana">DIAZ DE LA SEMANA</string>
    <string name="colores">colores</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="age">Edad</string>
    <string name="firstname">Nombre(s)</string>
    <string name="lastname">Apellido(s)</string>
    <string name="add_user">Registrar</string>
    <string name="sing_in">acceder</string>
    <string name="cancel">Cancelar</string>

    <string name="action_settings">Settings</string>
    <string name="titulo_actividad_detalle">Actividad De Detalle</string>
    <string name="nombre_transicion_imagen">imagen_compartida</string>
    <string name="animales">Animales</string>
    <string name="violin">Violin</string>
    <string name="guitarra">Guitarra</string>
    <string name="pianos">Pianos</string>
    <string name="saxofon">Saxofon</string>
    <string name="chelo">Chelo</string>
    <string name="bateria">Bateria</string>


</resources>
